<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="234dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/infoTextView"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoAdicionarTextView" />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/idEditTextDefault"
            android:inputType="number" />

        <EditText
            android:id="@+id/tituloEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/tituloEditTextDefault" />

        <EditText
            android:id="@+id/autorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/autorEditTextDefault" />

        <EditText
            android:id="@+id/editoraEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editoraEditTextDefault" />

        <EditText
            android:id="@+id/anoPublicacaoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/anoPublicacaoEditTextDefault" />

        <EditText
            android:id="@+id/isbnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/isbnEditTextDefault" />

        <Button
            android:id="@+id/actionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionAdicionarButton" />

        <Button
            android:id="@+id/cancelarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelarButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>