<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="58dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/idTextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tituloTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/tituloTextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/autorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/autorTextView" />

        <TextView
            android:id="@+id/editoraTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/editoraTextView" />

        <TextView
            android:id="@+id/anoPublicacaoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/anoPublicacaoTextView" />

        <TextView
            android:id="@+id/isbnTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/isbnTextView" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>